objects/Time_Expense_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time &amp; Expense Entries</relationshipLabel>
        <relationshipName>Time_Expense_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Virgin America</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Airport__c</fullName>
        <label>Arrival Airport</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Airport__c</fullName>
        <label>Departure Airport</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Expense_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Entry_Total__c</fullName>
        <formula>Meal_Cost__c  +  Flight_Cost__c  +  Total_Hotel_Cost__c  +  Mileage_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Entry Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Cost__c</fullName>
        <label>Flight Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flight_Type__c</fullName>
        <label>Flight Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Way</fullName>
                </value>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <label>Hotel Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Charges__c</fullName>
        <formula>IF(  Total_Hours__c  &gt; 0, Total_Hours__c * VALUE(CASE(Rate_Type__c, &apos;Standard&apos;, &apos;75&apos;, &apos;Overtime&apos;, &apos;125&apos;, &apos;Warranty&apos;, &apos;0&apos;, &apos;No Data&apos;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labor Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meal_Cost__c</fullName>
        <label>Meal Cost</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meal_Type__c</fullName>
        <label>Meal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mileage_Cost__c</fullName>
        <formula>Miles_Traveled__c  * (58 / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miles_Traveled__c</fullName>
        <label>Miles Traveled</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Nights__c</fullName>
        <label>Number of Nights</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Overtime</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Nightly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receipts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receipts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_In__c</fullName>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Hotel_Cost__c</fullName>
        <formula>Rate__c  *  Number_of_Nights__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hotel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>(Time_Out__c -  Time_In__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Time &amp; Expense Entries</relationshipLabel>
        <relationshipName>Time_Expense_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time &amp; Expense Entry</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time &amp; Expense Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time &amp; Expense Entries</pluralLabel>
    <recordTypes>
        <fullName>Expense</fullName>
        <active>true</active>
        <description>Expense Entry</description>
        <label>Expense</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time</fullName>
        <active>true</active>
        <description>Time Entry</description>
        <label>Time</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>